--- a/package.json
+++ b/package.json
@@ -3,12 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.6.4",
+    "@expo/vector-icons": "^12.0.5",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-id-swiper": "^4.0.0",
+    "react-responsive-carousel": "^3.2.21",
+    "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
+    "swiper": "^7.0.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
